<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="50dip"
	android:orientation="horizontal" >
	<LinearLayout
		android:orientation="vertical"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:layout_gravity="center" >
    
	   <TextView
	       android:text="@string/main_title"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_gravity="center"
			android:layout_marginBottom="25dip"
			android:textSize="24.5sp" />
	   	<Button
		    android:id="@+id/new_route_button"
		    android:text="@string/new_route_label"
		    android:background="@drawable/button_black"
		    style="@style/ButtonText" />
		<Button
		    android:id="@+id/history_button"
			android:background="@drawable/button_black"
		    style="@style/ButtonText"
			android:text="@string/history_label" />
		<Button
		    android:id="@+id/schedule_button"
			android:background="@drawable/button_black"
		    style="@style/ButtonText"
			android:text="@string/schedule_label" />
		<Button
		    android:id="@+id/about_button"
			android:background="@drawable/button_black"
		    style="@style/ButtonText"
			android:text="@string/about_label" />

		<Button
		    android:id="@+id/exit_button"
			android:background="@drawable/button_black"
		    style="@style/ButtonText"
			android:text="@string/exit_label" />
	
	</LinearLayout>
</LinearLayout>