<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
   <TableLayout android:layout_width="match_parent" 
       android:id="@+id/achievementInfo"
      android:layout_height="wrap_content"
      android:stretchColumns="1" android:layout_margin="5dp">
      
      <TableRow android:id="@+id/totalkmTableRow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView android:id="@+id/totalkmLabelTextView" 
            style="@style/RouteLabelTextView"
            android:text="@string/totalkm"></TextView>
         <TextView android:id="@+id/totalkmTextView"
            style="@style/RouteTextView"></TextView>
      </TableRow>
      <TableRow android:id="@+id/totaltimeTableRow"
         android:layout_width="match_parent" 
         android:layout_height="wrap_content">
         <TextView android:id="@+id/totaltimeLabelTextView" 
            style="@style/RouteLabelTextView"
            android:text="@string/total_time"></TextView>
         <TextView android:id="@+id/totaltimeTextView" 
            style="@style/RouteTextView"></TextView>
      </TableRow>

      <TableRow android:id="@+id/maxspeedTableRow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView android:id="@+id/maxspeedLabelTextView" 
            style="@style/RouteLabelTextView"
            android:text="@string/max_speed"></TextView>
         <TextView android:id="@+id/maxspeedTextView"
            style="@style/RouteTextView"></TextView>
      </TableRow>

       <TableRow android:id="@+id/totalcalTableRow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView android:id="@+id/totalcalLabelTextView" 
            style="@style/RouteLabelTextView"
            android:text="@string/total_cal"></TextView>
         <TextView android:id="@+id/totalcalTextView"
            style="@style/RouteTextView"></TextView>
      </TableRow>
      
   </TableLayout>

<Button android:id="@+id/viewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/achievementInfo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/mapButton"
        >    
</Button>

</RelativeLayout>